// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`table table snapshot basic table 1`] = `
Array [
  <div
    class="ant-table-wrapper"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table"
        >
          <div
            class="ant-table-title"
          >
            <div
              class="sula-table-action-wrapper"
            >
              <div
                class="sula-table-action-left"
              >
                <button
                  class="ant-btn"
                  type="button"
                >
                  <span>
                    left
                  </span>
                </button>
              </div>
              <div
                class="sula-table-action-right"
              >
                <button
                  class="ant-btn"
                  type="button"
                >
                  <span>
                    right
                  </span>
                </button>
              </div>
            </div>
          </div>
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup>
                  <col
                    class="ant-table-selection-col"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <div
                        class="ant-table-selection"
                      >
                        <label
                          class="ant-checkbox-wrapper"
                        >
                          <span
                            class="ant-checkbox"
                          >
                            <input
                              class="ant-checkbox-input"
                              type="checkbox"
                              value=""
                            />
                            <span
                              class="ant-checkbox-inner"
                            />
                          </span>
                        </label>
                      </div>
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      Id
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      Name
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      Age
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="0"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      0
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily0
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div>
                        age
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="1"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      1
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily1
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div>
                        age
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="2"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      2
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily2
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div>
                        age
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="3"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      3
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily3
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div>
                        age
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="4"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      4
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily4
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div>
                        age
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="5"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      5
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily5
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div>
                        age
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="6"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      6
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily6
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div>
                        age
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="7"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      7
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily7
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div>
                        age
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="8"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      8
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily8
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div>
                        age
                      </div>
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="9"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      9
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily9
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      <div>
                        age
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
        <ul
          class="ant-pagination ant-table-pagination ant-table-pagination-right"
          unselectable="unselectable"
        >
          <li
            aria-disabled="true"
            class="ant-pagination-prev ant-pagination-disabled"
            title="Previous Page"
          >
            <a
              class="ant-pagination-item-link"
              disabled=""
            >
              <span
                aria-label="left"
                class="anticon anticon-left"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="left"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                  />
                </svg>
              </span>
            </a>
          </li>
          <li
            class="ant-pagination-item ant-pagination-item-1 ant-pagination-item-active"
            tabindex="0"
            title="1"
          >
            <a>
              1
            </a>
          </li>
          <li
            class="ant-pagination-item ant-pagination-item-2"
            tabindex="0"
            title="2"
          >
            <a>
              2
            </a>
          </li>
          <li
            aria-disabled="false"
            class="ant-pagination-next"
            tabindex="0"
            title="Next Page"
          >
            <a
              class="ant-pagination-item-link"
            >
              <span
                aria-label="right"
                class="anticon anticon-right"
                role="img"
              >
                <svg
                  aria-hidden="true"
                  class=""
                  data-icon="right"
                  fill="currentColor"
                  focusable="false"
                  height="1em"
                  viewBox="64 64 896 896"
                  width="1em"
                >
                  <path
                    d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                  />
                </svg>
              </span>
            </a>
          </li>
        </ul>
      </div>
    </div>
  </div>,
  <form
    class="ant-form ant-form-horizontal"
  />,
  <form
    class="ant-form ant-form-horizontal"
  />,
]
`;

exports[`table table snapshot no pagination 1`] = `
Array [
  <div
    class="ant-table-wrapper"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup>
                  <col
                    class="ant-table-selection-col"
                  />
                </colgroup>
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <div
                        class="ant-table-selection"
                      >
                        <label
                          class="ant-checkbox-wrapper"
                        >
                          <span
                            class="ant-checkbox"
                          >
                            <input
                              class="ant-checkbox-input"
                              type="checkbox"
                              value=""
                            />
                            <span
                              class="ant-checkbox-inner"
                            />
                          </span>
                        </label>
                      </div>
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      Id
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      Name
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      Age
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="0"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      0
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily0
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      10
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="1"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      1
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily1
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      11
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="2"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      2
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily2
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      12
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="3"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      3
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily3
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      13
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="4"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      4
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily4
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      14
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="5"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      5
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily5
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      15
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="6"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      6
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily6
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      16
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="7"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      7
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily7
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      17
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="8"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      8
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily8
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      18
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="9"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      9
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily9
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      19
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="10"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      10
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily10
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      20
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="11"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      11
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily11
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      21
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="12"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      12
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily12
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      22
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="13"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      13
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily13
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      23
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="14"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      14
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily14
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      24
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="15"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      15
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily15
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      25
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="16"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      16
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily16
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      26
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="17"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      17
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily17
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      27
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="18"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      18
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily18
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      28
                    </td>
                  </tr>
                  <tr
                    class="ant-table-row ant-table-row-level-0"
                    data-row-key="19"
                  >
                    <td
                      class="ant-table-cell ant-table-selection-column"
                    >
                      <label
                        class="ant-checkbox-wrapper"
                      >
                        <span
                          class="ant-checkbox"
                        >
                          <input
                            class="ant-checkbox-input"
                            type="checkbox"
                            value=""
                          />
                          <span
                            class="ant-checkbox-inner"
                          />
                        </span>
                      </label>
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      19
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      lily19
                    </td>
                    <td
                      class="ant-table-cell"
                    >
                      29
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <form
    class="ant-form ant-form-horizontal"
  />,
  <form
    class="ant-form ant-form-horizontal"
  />,
]
`;

exports[`table table snapshot no paging 1`] = `
Array [
  <div
    class="ant-table-wrapper"
  >
    <div
      class="ant-spin-nested-loading"
    >
      <div
        class="ant-spin-container"
      >
        <div
          class="ant-table"
        >
          <div
            class="ant-table-container"
          >
            <div
              class="ant-table-content"
            >
              <table
                style="table-layout: auto;"
              >
                <colgroup />
                <thead
                  class="ant-table-thead"
                >
                  <tr>
                    <th
                      class="ant-table-cell"
                    >
                      Id
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      Name
                    </th>
                    <th
                      class="ant-table-cell"
                    >
                      Age
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="ant-table-tbody"
                >
                  <tr
                    class="ant-table-placeholder"
                  >
                    <td
                      class="ant-table-cell"
                      colspan="3"
                    >
                      <div
                        class="ant-empty ant-empty-normal"
                      >
                        <div
                          class="ant-empty-image"
                        >
                          <svg
                            class="ant-empty-img-simple"
                            height="41"
                            viewBox="0 0 64 41"
                            width="64"
                            xmlns="http://www.w3.org/2000/svg"
                          >
                            <g
                              fill="none"
                              fill-rule="evenodd"
                              transform="translate(0 1)"
                            >
                              <ellipse
                                class="ant-empty-img-simple-ellipse"
                                cx="32"
                                cy="33"
                                rx="32"
                                ry="7"
                              />
                              <g
                                class="ant-empty-img-simple-g"
                                fill-rule="nonzero"
                              >
                                <path
                                  d="M55 12.76L44.854 1.258C44.367.474 43.656 0 42.907 0H21.093c-.749 0-1.46.474-1.947 1.257L9 12.761V22h46v-9.24z"
                                />
                                <path
                                  class="ant-empty-img-simple-path"
                                  d="M41.613 15.931c0-1.605.994-2.93 2.227-2.931H55v18.137C55 33.26 53.68 35 52.05 35h-40.1C10.32 35 9 33.259 9 31.137V13h11.16c1.233 0 2.227 1.323 2.227 2.928v.022c0 1.605 1.005 2.901 2.237 2.901h14.752c1.232 0 2.237-1.308 2.237-2.913v-.007z"
                                />
                              </g>
                            </g>
                          </svg>
                        </div>
                        <p
                          class="ant-empty-description"
                        >
                          No Data
                        </p>
                      </div>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
  <form
    class="ant-form ant-form-horizontal"
  />,
  <form
    class="ant-form ant-form-horizontal"
  />,
]
`;
